Bug 569276 - [15][test] port EnumTest for local enums - part 2 - further tests ported
Change-Id: Ie51a021909c075baa9b049fc4efcfa472f7ccca5
Signed-off-by: Manoj Palat <manpalat@in.ibm.com>